tests/compile_errors/json/007_readonly_in_function.xr
// 007_readonly_in_function.xr
// 错误测试：在函数中修改只读字段
// 期望错误：无法修改只读字段
fn updateUser(u: {id,name}) {
    u.id = 999
}

let user: {id,name} = { "id": 1, "name": "test" }
updateUser(user)
